--- a/sistema-imobiliario/src/ViewSystem/FXMLVBoxMain.fxml
+++ b/sistema-imobiliario/src/ViewSystem/FXMLVBoxMain.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -10,13 +11,13 @@
    <children>
       <MenuBar>
         <menus>
-          <Menu fx:id="MenuCliente" mnemonicParsing="false" text="Clientes">
+          <Menu fx:id="menuCliente" mnemonicParsing="false" text="Clientes">
             <items>
-              <MenuItem fx:id="ConsultarTodos" mnemonicParsing="false" onAction="#handleMenuItemCadastrosClientes" text="Consultar Todos" />
-                  <MenuItem fx:id="ConsultarCliente" mnemonicParsing="false" text="Consultar Cliente" />
-                  <MenuItem fx:id="IncluirCliente" mnemonicParsing="false" text="Incluir Cliente" />
-                  <MenuItem fx:id="EditarCliente" mnemonicParsing="false" text="Editar Cliente" />
-                  <MenuItem fx:id="DeletarCliente" mnemonicParsing="false" text="Deletar Cliente" />
+              <MenuItem fx:id="menuItemConsultarTodos" mnemonicParsing="false" onAction="#handleMenuItemTodosClientes" text="Consultar Todos" />
+                  <MenuItem fx:id="menuItemConsultarCliente" mnemonicParsing="false" text="Consultar Cliente" />
+                  <MenuItem fx:id="menuItemIncluirCliente" mnemonicParsing="false" text="Incluir Cliente" />
+                  <MenuItem fx:id="menuItemAlterarCliente" mnemonicParsing="false" text="Editar Cliente" />
+                  <MenuItem fx:id="menuItemDeletarCliente" mnemonicParsing="false" text="Deletar Cliente" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Imóveis">
@@ -31,6 +32,6 @@
           </Menu>
         </menus>
       </MenuBar>
-      <AnchorPane fx:id="AnchorPane" prefHeight="375.0" prefWidth="600.0" />
+      <AnchorPane fx:id="anchorPane" prefHeight="375.0" prefWidth="600.0"></AnchorPane>
    </children>
 </VBox>
