--- a/sistema-imobiliario/src/ViewSystem/FXMLVBoxMain.fxml
+++ b/sistema-imobiliario/src/ViewSystem/FXMLVBoxMain.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -11,7 +10,7 @@
    <children>
       <MenuBar>
         <menus>
-          <Menu fx:id="menuCliente" mnemonicParsing="false" text="Clientes">
+          <Menu fx:id="menuClientes" mnemonicParsing="false" text="Clientes">
             <items>
               <MenuItem fx:id="menuItemConsultarTodos" mnemonicParsing="false" onAction="#handleMenuItemTodosClientes" text="Consultar Todos" />
                   <MenuItem fx:id="menuItemConsultarCliente" mnemonicParsing="false" text="Consultar Cliente" />
@@ -20,9 +19,13 @@
                   <MenuItem fx:id="menuItemDeletarCliente" mnemonicParsing="false" text="Deletar Cliente" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Imóveis">
+          <Menu fx:id="MenuImoveis" mnemonicParsing="false" text="Imóveis">
             <items>
-              <MenuItem mnemonicParsing="false" text="" />
+                  <MenuItem fx:id="menuItemImoveisConsultarTodos" mnemonicParsing="false" onAction="#handleMenuItemTodosImoveis" text="Consultar Todos" />
+                  <MenuItem fx:id="menuItemImoveisConsultar" mnemonicParsing="false" text="Consultar Imovel" />
+                  <MenuItem fx:id="menuItemImoveisIncluir" mnemonicParsing="false" text="Incluir Imovel" />
+                  <MenuItem fx:id="menuItemImoveisAlterar" mnemonicParsing="false" text="Alterar Imovel" />
+                  <MenuItem fx:id="menuItemImoveisRemover" mnemonicParsing="false" text="Remover Imovel" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
@@ -32,6 +35,6 @@
           </Menu>
         </menus>
       </MenuBar>
-      <AnchorPane fx:id="anchorPane" prefHeight="375.0" prefWidth="600.0"></AnchorPane>
+      <AnchorPane fx:id="anchorPane" prefHeight="375.0" prefWidth="600.0" />
    </children>
 </VBox>
