feita a tela de alugar e melhora no design das telas

--- a/sistema-imobiliario/src/ViewSystem/FXMLAnchorPaneCadastroCliente.fxml
+++ b/sistema-imobiliario/src/ViewSystem/FXMLAnchorPaneCadastroCliente.fxml
@@ -3,14 +3,20 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="Controllers.FXMLAnchorPaneCadastroClienteController">
+<AnchorPane id="AnchorPaneCadastroCliente" fx:id="imageViewCadastroCliente" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="600.0" style="-fx-background-color: darkgray;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAnchorPaneCadastroClienteController">
    <children>
+      <ImageView fx:id="imageViewCadastroImoveis" fitHeight="80.0" fitWidth="80.0" layoutX="520.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../bkgd.png" />
+         </image>
+      </ImageView>
       <GridPane layoutX="65.0" layoutY="113.0" prefHeight="150.0" prefWidth="473.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="163.0" minWidth="10.0" prefWidth="73.0" />
@@ -24,11 +30,11 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField fx:id="textFieldClienteNome" GridPane.columnIndex="1" />
-            <TextField fx:id="textFieldClienteCpf" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="textFieldClienteEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="textFieldClienteEndereco" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="textFieldClienteTelefone" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="textFieldClienteNome" style="-fx-background-radius: 5;" GridPane.columnIndex="1" />
+            <TextField fx:id="textFieldClienteCpf" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="textFieldClienteEmail" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="textFieldClienteEndereco" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="textFieldClienteTelefone" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Label text="Nome" />
             <Label text="CPF" GridPane.rowIndex="1" />
             <Label text="Email" GridPane.rowIndex="2" />
@@ -36,7 +42,7 @@
             <Label text="Telefone" GridPane.rowIndex="4" />
          </children>
       </GridPane>
-      <Button fx:id="buttonClienteConfirmar" layoutX="351.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleButtonConfirmar" text="Confirmar" />
-      <Button fx:id="buttonClienteCancelar" layoutX="469.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleButtonCancelar" prefHeight="25.0" prefWidth="69.0" text="Cancelar" />
+      <Button fx:id="buttonClienteConfirmar" layoutX="351.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleButtonConfirmar" style="-fx-background-radius: 8;" text="Confirmar" />
+      <Button fx:id="buttonClienteCancelar" layoutX="469.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleButtonCancelar" prefHeight="25.0" prefWidth="69.0" style="-fx-background-radius: 8;" text="Cancelar" />
    </children>
 </AnchorPane>
