--- a/sistema-imobiliario/src/ViewSystem/FXMLAnchorPaneAlugarImoveis.fxml
+++ b/sistema-imobiliario/src/ViewSystem/FXMLAnchorPaneAlugarImoveis.fxml
@@ -10,14 +10,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPaneCadastroImoveis" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="600.0" style="-fx-background-color: darkgray;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAnchorPaneCadastroImoveisController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="600.0" style="-fx-background-color: darkgray;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAnchorPaneAlugarImoveisController">
    <children>
-      <ImageView fx:id="imageViewCadastroImoveis" fitHeight="80.0" fitWidth="80.0" layoutX="520.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../bkgd.png" />
-         </image>
-      </ImageView>
-      <GridPane layoutX="64.0" layoutY="90.0" prefHeight="196.0" prefWidth="473.0">
+      <GridPane layoutX="76.0" layoutY="96.0" prefHeight="150.0" prefWidth="473.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="163.0" minWidth="10.0" prefWidth="73.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="418.0" minWidth="10.0" prefWidth="400.0" />
@@ -25,8 +20,6 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -34,21 +27,34 @@
          <children>
             <TextField fx:id="textFieldImovelId" style="-fx-background-radius: 5;" GridPane.columnIndex="1" />
             <TextField fx:id="textFieldImovelEndereco" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="textFieldImovelArea" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="textFieldImovelQuartos" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="textFieldImovelGaragem" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Label text="ID" />
             <Label text="Endereço" GridPane.rowIndex="1" />
-            <Label text="Area" GridPane.rowIndex="2" />
-            <Label text="Quartos" GridPane.rowIndex="3" />
-            <Label text="Garagem" GridPane.rowIndex="4" />
-            <TextField fx:id="textFieldImovelValor" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="textFieldImovelAlugado" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <Label text="Valor" GridPane.rowIndex="5" />
-            <Label text="Alugado" GridPane.rowIndex="6" />
+            <TextField fx:id="textFieldImovelValor" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="textFieldImovelAlugado" style="-fx-background-radius: 5;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Valor" GridPane.rowIndex="2" />
+            <Label text="Alugado" GridPane.rowIndex="3" />
          </children>
       </GridPane>
       <Button fx:id="buttonImovelConfirmar" layoutX="351.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleButtonImovelConfirmar" style="-fx-background-radius: 8;" text="Confirmar" />
       <Button fx:id="buttonImovelCancelar" layoutX="469.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleButtonImovelCancelar" prefHeight="25.0" prefWidth="69.0" style="-fx-background-radius: 8;" text="Cancelar" />
+      <GridPane layoutX="76.0" layoutY="246.0" prefHeight="63.0" prefWidth="473.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="74.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="405.0" minWidth="10.0" prefWidth="399.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label fx:id="labelImovelLocatario" text="Locatário" />
+            <TextField fx:id="textFieldImovelCpfLocatario" style="-fx-background-radius: 5;" GridPane.columnIndex="1" />
+         </children>
+      </GridPane>
+      <ImageView fx:id="imageViewAlugarImoveis" fitHeight="80.0" fitWidth="80.0" layoutX="520.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../bkgd.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
