--- a/sistema-imobiliario/src/ViewSystem/FXMLAnchorPaneTodosImoveis.fxml
+++ b/sistema-imobiliario/src/ViewSystem/FXMLAnchorPaneTodosImoveis.fxml
@@ -10,19 +10,21 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAnchorPaneTodosImoveisController">
+<AnchorPane id="AnchorPaneTodosImoveis" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLAnchorPaneTodosImoveisController">
    <children>
       <SplitPane dividerPositions="0.41304347826086957" layoutX="153.0" layoutY="96.0" prefHeight="375.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="tableViewImoveis" layoutX="-7.0" layoutY="71.0" prefHeight="373.0" prefWidth="244.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tableViewImoveis" layoutX="-7.0" layoutY="71.0" prefHeight="373.0" prefWidth="244.0" style="-fx-background-color: lightgray;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                       <TableColumn fx:id="tableColumnImovelId" prefWidth="75.0" text="ID" />
                       <TableColumn fx:id="tableColumnImovelAddress" prefWidth="75.0" text="Endereço" />
@@ -33,14 +35,27 @@
                   </TableView>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: darkgray;">
                <children>
+                  <ImageView fx:id="imageViewTodosImoveis" fitHeight="80.0" fitWidth="80.0" layoutX="268.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../bkgd.png" />
+                     </image>
+                  </ImageView>
+                  <Group layoutX="40.0" layoutY="333.0">
+                     <children>
+                        <Button fx:id="buttonImovelAlugar" mnemonicParsing="false" onAction="#handleButtonImoveisAlugar" prefHeight="25.0" prefWidth="64.0" style="-fx-background-radius: 8;" text="Alugar" />
+                        <Button fx:id="buttonImovelAlterar" layoutX="149.0" mnemonicParsing="false" onAction="#handleButtonImoveisAlterar" prefHeight="25.0" prefWidth="64.0" style="-fx-background-radius: 8;" text="Alterar" />
+                        <Button fx:id="buttonImovelRemover" layoutX="224.0" mnemonicParsing="false" onAction="#handleButtonImoveisRemover" style="-fx-background-radius: 8;" text="Remover" />
+                        <Button fx:id="buttonImovelInserir" layoutX="75.0" mnemonicParsing="false" onAction="#handleButtonImoveisIncluir" prefHeight="25.0" prefWidth="64.0" style="-fx-background-radius: 8;" text="Inserir" />
+                     </children>
+                  </Group>
                   <Label layoutX="115.0" layoutY="31.0" text="Detalhes do Imóvel" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <GridPane layoutX="24.0" layoutY="112.0" prefHeight="150.0" prefWidth="298.0">
+                  <GridPane alignment="CENTER" layoutX="24.0" layoutY="112.0" prefHeight="150.0" prefWidth="298.0" style="-fx-background-color: lightgray; -fx-background-radius: 5;">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="67.0" />
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="191.0" />
@@ -48,7 +63,7 @@
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -71,13 +86,6 @@
                         <Label fx:id="labelImovelAlugado" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                      </children>
                   </GridPane>
-                  <Group layoutX="115.0" layoutY="333.0">
-                     <children>
-                        <Button fx:id="buttonImovelAlterar" layoutX="74.0" mnemonicParsing="false" onAction="#handleButtonImoveisAlterar" prefHeight="25.0" prefWidth="64.0" text="Alterar" />
-                        <Button fx:id="buttonImovelRemover" layoutX="149.0" mnemonicParsing="false" onAction="#handleButtonImoveisRemover" text="Remover" />
-                        <Button fx:id="buttonImovelInserir" mnemonicParsing="false" onAction="#handleButtonImoveisIncluir" prefHeight="25.0" prefWidth="64.0" text="Inserir" />
-                     </children>
-                  </Group>
                </children>
             </AnchorPane>
         </items>
